# mycroft

./: .cz.toml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  codecov.yml  config.default.json  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json
.github/workflows/: codeql.yml  mypy.yml  nitpick.yml  pre-commit-update.yml  pylint.yml  pythonapp.yml  tests.yml
alembic/: README  env.py
alembic/versions/: 18971030c3e0_update_quote_table_to_use_booleans.py  263108d18172_sync_nullables.py  60f88c7765e0_add_connection_to_permissions_tables.py  7ddf6215d3dd_sync_nullables_after_migration.py  e31beb6a9203_add_msg_id_to_tells_table.py
cloudbot/: __init__.py  __main__.py  bot.py  client.py  config.py  db.py  errors.py  event.py  hook.py  permissions.py  plugin.py  plugin_hooks.py  reloader.py
cloudbot/clients/: irc.py
cloudbot/util/: __init__.py  async_util.py  backoff.py  colors.py  database.py  executor_pool.py  filesize.py  formatting.py  func_utils.py  http.py  irc.py  mapping.py  pager.py  sequence.py  text.py  textgen.py  timeformat.py  timeparse.py  tokenbucket.py  web.py
docs/: README.md
docs/installing/: win.md
docs/user/: main_user.md
plugins/: admin_bot.py  admin_channel.py  animal_gifs.py  attacks.py  autojoin.py  badwords.py  bible.py  books.py  brainfuck.py  brew.py  cats.py  chain.py  chatbot.py  cheer.py  correction.py  cryptocurrency.py  deals.py  dig.py  dogpile.py  domainr.py  dragonvale.py  dramatica.py  drinks.py  duckhunt.py  eightball.py  etymology.py  factoids.py  feeds.py  flip.py  fmk.py  foaas.py  foods.py  fortune.py  gaming.py  giphy.py  github.py  gnomeagainsthumanity.py  google_cse.py  google_translate.py  grab.py  (+67 more)
plugins/core/: autojoin.py  cap.py  chan_key_db.py  chan_log.py  chan_track.py  check_conn.py  core_connect.py  core_ctcp.py  core_hooks.py  core_misc.py  core_out.py  core_sieve.py  core_tracker.py  help.py  history.py  hook_stats.py  ignore.py  log.py  optout.py  plugin_control.py  regex_chans.py  sasl.py  server_info.py
plugins/pastebins/: sprunge.py
tests/: conftest.py
tests/core_tests/: test_bot.py  test_client.py  test_config.py  test_errors.py  test_event.py  test_hook.py  test_init.py  test_irc_client.py  test_main.py  test_permission_manager.py  test_plugin_hooks.py  test_plugin_manager.py  test_reloader.py  test_schema_migration.py
tests/core_tests/util_tests/: test_colors.py  test_database.py  test_filesize.py  test_formatting.py  test_func_utils.py  test_http.py  test_irc.py  test_mapping.py  test_sequence.py  test_textgen.py  test_timeformat.py  test_timeparse.py  test_tokenbucket.py  test_web.py
tests/data/: get_dogpile_data.py
tests/data/xkcd/: get_xkcd_info.py
tests/plugin_tests/: cap_test.py  poll_test.py  server_info_test.py  test_admin_bot.py  test_admin_channel.py  test_autojoin.py  test_badwords.py  test_bible.py  test_books.py  test_brainfuck.py  test_brew.py  test_cap.py  test_cats.py  test_chain.py  test_chan_key_db.py  test_chan_track.py  test_chatbot.py  test_core_connect.py  test_core_hooks.py  test_core_misc.py  test_core_sieve.py  test_cryptocurrency.py  test_ctcp.py  test_cypher.py  test_data_plugins.py  test_deals.py  test_dig.py  test_dogpile.py  test_drinks.py  test_duckhunt.py  test_fact.py  test_factoids.py  test_feeds.py  test_flip.py  test_foaas.py  test_gaming.py  test_giphy.py  test_github.py  test_googleurlparse.py  test_grab.py  (+49 more)
tests/util/: __init__.py  mock_bot.py  mock_config.py  mock_conn.py  mock_db.py  mock_irc_client.py  mock_module.py
tools/: escape_non_ascii.py
